--- a/RazorWeb/Properties/launchSettings.json
+++ b/RazorWeb/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "https://localhost:7142/VNPay/Payment",
       "applicationUrl": "https://localhost:7142;http://localhost:5142",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
